# src/server.ts
@@ -1,13 +1,15 @@
 import express, { Application } from "express";
 import cors from "cors";
-import user from "./routes/user.route";
 import swaggerUi from "swagger-ui-express";
 import morgan from "morgan";
 import bodyparser from "body-parser";
 import cookieSession from "cookie-session";
 import passport from "passport";
+import user from "./routes/user.route";
+import category from "./routes/category.route";
 require("dotenv").config();
 require("../config/passport")(passport);
+require("../config/db")();
 
 const app: Application = express();
 const port = process.env.PORT || 3001;
@@ -35,8 +37,6 @@ app.use(
   })
 );
 
-const auth = require("./routes/auth");
-
 app.use(express.static("public"));
 app.use(express.json());
 
@@ -54,8 +54,10 @@ app.get("/", (req, res) => {
   res.send("working");
 });
 
+const auth = require("./routes/auth");
 app.use("/", user);
 app.use("/auth", auth);
+app.use("/categories", category);
 
 app.listen(port, () => {
   console.log(`subscriber connected to ${port}`);
